--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,7 +1,11 @@
 {{!-- Se crea un handlebars para la vista de realTimeProducts que actualiza la lista de productos utilizando socket.io
 --}}
 
-<h1>Lista de productos</h1>
+<h1>Bienvenido {{userName}}</h1>
+
+<p>Tu rol es: {{userRole}}</p>
+
+<h2>Lista de productos</h2>
 
 {{!-- Se crea una lista de productos --}}
 
