--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="es">
 
 <head>
@@ -14,14 +14,9 @@
 </head>
 
 <body>
-      <main class="container-fluid mainDeLogin" id="mainIngreso">
-            <div class="text-center">
-                  <div class="row justify-content-center pe-1 ps-1">
-                        <div class="col-xxl-8 col-xl-8 col-lg-6 col-md-8 col-sm-8 col-xs-12 border mt-5 mb-5 pt-5 pb-5"
-                              id="login">
-                              {{{body}}}
-                        </div>
-                  </div>
+      <main class="container mainDeLogin" id="mainIngreso">
+            <div class="text-center"> 
+                  {{{body}}}
             </div>
       </main>
 
