--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,5 +1,21 @@
-<h1>Lista de Productos</h1>
-<ul>
+<h1 class="mb-3">Bienvenido {{userName}}</h1>
+
+<h4 class="mb-3">Tu rol es: {{userRole}}</h4>
+
+{{#if isUser}}
+<button type="submit" class="col-6 btn btn-primary rounded-0 ">
+      <a href="/profile" class="text-decoration-none text-reset">VER PERFIL</a>
+</button>
+{{/if}}
+
+<form action="/api/sessions/logout" method="post">
+      <button type="submit" class="col-6 btn btn-dark rounded-0">
+            <a class="text-decoration-none text-reset">CERRAR SESIÓN</a>
+      </button>
+</form>
+
+<h2 class="mt-5">Lista de productos</h2>
+<ul >
       {{#each products}}
       <li>
             <h2>{{this.title}}</h2>
@@ -7,13 +23,11 @@
             <p>Precio: {{this.price}}</p>
             <img src="{{this.thumbnails.[0]}}" alt="{{this.title}}">
 
-            <!-- Agregar al carrito -->
-            <form action="/addToCart" method="post">
+            <form action="" method="put">
                   <input type="hidden" name="productId" value="{{this.id}}">
                   <input type="submit" value="Agregar al carrito">
             </form>
 
-            <!-- Enlace para ver detalles -->
             <a href="/products/{{this.id}}">Ver detalles</a>
       </li>
       {{/each}}
