Se agrega la vista /profile con la posibilidad de actualizar los datos del usuario. También se añadió una propiedad phone a los usuarios, pudiendo añadir, modificar o eliminar un teléfono desde la vista /profile. Por último, se extendió la duración de la cookie que mantiene la sesión activa y permite el acceso al resto de vistas.

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -4,6 +4,10 @@
 .visible {
   display: block; }
 
+  .aclaraciones {
+  font-size: 0.8rem;
+  color: grey !important; }
+
   main div {
   margin-top: 0.75rem;
   margin-bottom: 0.75rem; }
